Revision history for Perl extension App::Sqitch

1.2.1

1.2.0  2021-11-20T22:45:00Z
     - Fixed partitioned search for deployed changes on Oracle and Exasol to
       correctly support plans with more than 250 changes. Thanks to @Nicqu
       for the report (#521).
     - DBI connections to the registry will now be set to trace level one
       when a verbosity level of three or higher is passed to Sqitch
       (i.e., `sqitch -vvv`). Thanks to @wkoszek for the suggestion (#155).
     - Renamed the "master" branch to "main" and updated all relevant
       references.
     - Fixed the parsing of the Snowflake account name from the target URL
       to that it no longer strips out the region and cloud platform parts.
       Also deprecated the use of the region, host, and port config and
       environment variables. This is to comply with the new account name
       format. Thanks to @ldsingh00 for the report (#544).
     - The checkout command will now show a usage statement when no branch
       name is passed to it, rather than a series of warnings and a Git error.
       Thanks to François Beausoleil for the report (#561).
     - The checkout command now works when operating on a Sqitch project in
       a subdirectory of a Git project. Thanks to François Beausoleil for the
       report and suggested fix (#560).
     - Fixed a failing bundle test when a top directory was configured in the
       user or system configuration. Thanks to @CodingMinds for the spot
       (#587).
     - Added support to the Exasol engine for the `AUTHMETHOD` query parameter
       (to allow Open ID authentication) and the `SSLCERTIFICATE=SSL_VERIFY_NONE`
       query parameter to disable SSL verification. Thanks to Torsten Glunde
       for the report (#588).
     - Fixed "Use of uninitialized value $engine in concatenation" error when
       Sqitch is unable to determine the engine when writing a plan file. Only